[gd_scene load_steps=3 format=3 uid="uid://bjbt4agmhoeel"]

[ext_resource type="Script" uid="uid://d30v2roglpyx0" path="res://Scripts/gameeditor.gd" id="1_pjdm3"]

[sub_resource type="Theme" id="Theme_4qmyn"]
default_font_size = 25

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjdm3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.351563, 0.351563, 0.351563, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
item_count = 1
item_0/text = "(+) Add New Question"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Time Limit"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55.63)
layout_mode = 2
theme = SubResource("Theme_4qmyn")
max_value = 600.0
alignment = 1
update_on_text_changed = true
suffix = "Seconds"
custom_arrow_step = 1.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Select a Save Folder"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Save"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Primary Image"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Image File"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Reveal Image (Optional)"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Image File"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Question"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(120, 160.385)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Question Here"
wrap_mode = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Difficulty"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 35
alignment = 1
selected = 0
item_count = 5
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Elite"
popup/item_3/id = 3
popup/item_4/text = "Master"
popup/item_4/id = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Correct Answer
																																																->"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Correct Answer Here"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Correct Answer 
Reveal (Optional) 
																																																									->"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Correct Reveal Answer Here"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer
																																																->"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Answer Here"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer 
Reveal (Optional) 
																																																									->"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Reveal Answer Here"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer
																																																->"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Answer Here"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer 
Reveal (Optional) 
																																																									->"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Reveal Answer Here"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer
																																																->"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Answer Here"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer 
Reveal (Optional) 
																																																									->"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Reveal Answer Here"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer
																																																->"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Answer Here"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Decoy Answer 
Reveal (Optional) 
																																																									->"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
placeholder_text = "Add Decoy Reveal Answer Here"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 640)
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemList" to="." method="_on_questionlistitem_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_selectmainimage_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button" to="." method="_on_selectrevealimage_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/TextEdit2" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer2/HBoxContainer/TextEdit2" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer3/HBoxContainer/TextEdit2" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer4/HBoxContainer/TextEdit2" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer/TextEdit" to="." method="questionedited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/VBoxContainer5/HBoxContainer/TextEdit2" to="." method="questionedited"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
